--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,39 @@
 *{
-    background-color: aqua;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;
+}
+body {
+    box-sizing: border-box;
+}
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #55d4cb;
+    height: 60px;
+}
+nav .logo a{
+    text-decoration: none;
+    font-weight: bold;
+    color: cadetblue;
+}
+nav .nav-menu {
+    gap: 10px;
+    list-style-type: none;
+}
+nav .nav-menu .nav-link {
+    display: inline;
+}
+
+nav .nav-menu .nav-link a {
+    padding: 10px;
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+}
+nav .nav-menu .nav-link a:hover {
+    color: white;
+    background-color:#ffdd00;
+    border-radius: 5px;
 }
