--- a/includes/navbar.html
+++ b/includes/navbar.html
@@ -5,4 +5,7 @@
             <li class="nav-link"><a href="">Resource</a></li>
             <li class="nav-link"><a href="">About</a></li>
         </ul>
+        <div class="burger">
+            <ion-icon name="menu-outline"></ion-icon>
+        </div>
     </nav>
