--- a/assets/style.css
+++ b/assets/style.css
@@ -40,7 +40,21 @@ nav .nav-menu .nav-link a:hover {
 
 nav .burger {
     display: none;
+    align-items: center;
     font-size: 18px;
+}
+
+nav .burger a {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    border-radius: 50%;
+    color: #fff;
+    font-weight: bold;
+}
+
+nav .burger a:hover {
+    background-color: #ffdd00;
 }
 
 @media (max-width:720px) {
